<resources>
    <string name="app_name">My Programs</string>
    <string name="edit">Edit</string>
    <string name="favorite">Favorite</string>
    <string name="more">More</string>
    <string name="addNewProgram">Add New Program</string>
    <string name="settings">Settings</string>
    <string name="managePrograms">Manage Programs</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detailsProgram">Details</string>
    <string name="programDateAdded">Creation date:</string>
    <string name="programDateEdited">Last modified date:</string>
    <string name="addEditProgram">Add New Program</string>
    <string name="addProgramName">Program Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="emptyTextManageProgram">There is no Program</string>
    <string name="errorText">There is a problem</string>
    <string name="allSubjectText">All Subjects</string>
    <string name="emptyTextAllSubject">There is no subject</string>
    <string name="addTimeText">Add new time</string>
    <string name="emptyTextManageTime">There is no Time</string>
    <string name="addNewTimes">Add new time</string>
    <string name="editText_subjectTextHint">Subject Name</string>
    <string name="editText_lecturerTextHint">Lecturer Name</string>
    <string name="absenteeismHint">Absenteeism</string>
    <string name="absenteeismText">Absenteeism:\u0020</string>
    <string name="subjectDetails">Subject Details</string>
    <string name="goToSubjects">Go to subjects</string>
    <string name="emptyTextSubjectMain">There is no Subject</string>
    <string name="whichDayText">Which Day</string>
    <string name="classroom">Classroom</string>
    <string name="startTime">Start Time</string>
    <string name="finishTime">Finish Time</string>
    <string name="typeOfSubject">Type of Subject</string>
    <string name="reminderText">Reminder</string>
    <string name="reminderInfoText">You will receive notification when the subject time is approaching</string>
    <string name="createNewProgram">Create new program</string>
    <string name="addNewSubject">Add new subject</string>
    <string name="radio_pink">Pink</string>
    <string name="radio_orange">Orange</string>
    <string name="radio_green">Green</string>
    <string name="radio_blue">Blue</string>
    <string name="radio_yellow">Yellow</string>
    <string name="radio_red">Red</string>
    <string name="radio_brown">Brown</string>
    <string name="radio_purple">Purple</string>
    <string name="alertDialog_posButton">Yes</string>
    <string name="alertDialog_negButton">No</string>
    <string name="programName">Program Name</string>
    <string name="allSubjects">All Subjects</string>
    <string name="editSubject">Edit Subject</string>
    <string name="deleteSubject">Delete Subject</string>
    <string name="subjectName">Subject Name</string>
    <string name="deleteSubjectTime">Delete Subject Time</string>
    <string name="editProgram">Edit Program</string>
    <string name="emptyTextExamMain">There is no Exam</string>
    <string name="addNewExam">Add New Exam</string>
    <string name="targetPointText">Target Point:\u0020</string>
    <string name="typeOfExam">Type Of Exam</string>
    <string name="typeOfProgram">Type Of Program</string>
    <string name="allExams">All Exams</string>
    <string name="emptyTextAllExam">There is no exam</string>
    <string name="examName">Exam Name</string>
    <string name="examDetails">Exam Details</string>
    <string name="examFinished">Done</string>
    <string name="examNotFinished">Not Done</string>
    <string name="point">Point:\u0020</string>
    <string-array name="Days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="reminder">
        <item>No Reminder</item>
        <item>On Time</item>
        <item>5 Minutes ago</item>
        <item>10 Minutes ago</item>
        <item>15 Minutes ago</item>
        <item>30 Minutes ago</item>
        <item>1 Hour ago</item>
    </string-array>
    <string-array name="typeOfSubject">
        <item>Subject</item>
        <item>Laboratory</item>
        <item>Practice</item>
        <item>Online</item>
    </string-array>
</resources>