<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.ExamProgram.AddEditExamFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar_subject_add_edit_time"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/addNewExam" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/examName"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_baseline_menu_book_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exam_addEditExam_editText_ExamName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:id="@+id/colorPicker_radioGroup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <RadioGroup
                    android:id="@+id/colorPicker_radioGroup_first"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_radiobutton_color_picker_soft_red"
                        android:button="@null"
                        android:checked="true"
                        android:text="@string/radio_red"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/radio_yellow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_radiobutton_color_picker_yellow"
                        android:button="@null"
                        android:text="@string/radio_yellow"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/radio_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_radiobutton_color_picker_blue"
                        android:button="@null"
                        android:text="@string/radio_blue"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/radio_brown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_radiobutton_color_picker_brown"
                        android:button="@null"
                        android:text="@string/radio_brown"
                        android:textAlignment="center" />


                </RadioGroup>

                <RadioGroup
                    android:id="@+id/colorPicker_radioGroup_second"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_radiobutton_color_picker_green"
                        android:button="@null"
                        android:text="@string/radio_green"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/radio_orange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_radiobutton_color_picker_soft_orange"
                        android:button="@null"
                        android:text="@string/radio_orange"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/radio_pink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_radiobutton_color_picker_pink"
                        android:button="@null"
                        android:text="@string/radio_pink"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/radio_purple"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_radiobutton_color_picker_purple"
                        android:button="@null"
                        android:text="@string/radio_purple"
                        android:textAlignment="center" />

                </RadioGroup>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="end"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/isExamDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/examFinished"
                    android:layoutDirection="rtl"
                    android:textAlignment="textEnd"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_point"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:hint="@string/point"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exam_addEditExam_editText_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?attr/colorPrimary"
                android:useDefaultMargins="true" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addEditSubjectTime_textInputLayout_dayPicker"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/whichDayText">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView_whichDay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--        <View-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="1dp"-->
            <!--            android:layout_marginTop="10dp"-->
            <!--            android:background="?attr/colorPrimary" />-->

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/classroom"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exam_addEditExam_editText_classroom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:hint="@string/startTime">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/exam_addEditExam_editText_startTimePicker"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusableInTouchMode="false"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:hint="@string/finishTime">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/exam_addEditExam_editText_finishTimePicker"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusableInTouchMode="false"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/typeOfExam">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView_typeOfExam"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/targetPointText"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exam_addEditExam_editText_targetPoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/reminderText">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView_reminderPicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/reminderInfoText"
                android:textAlignment="textEnd"
                android:textSize="12sp" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/button_cancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>